--- a/src/components/Node.css
+++ b/src/components/Node.css
@@ -18,6 +18,7 @@
 }
 
 .Node--selected {
+    padding: 4px;
     border: 1px solid rgba(0, 0, 0, 0.4);
     box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.2);
     border-radius: 8px;
